Make some enhancement to remove warnings